changed hero image

--- a/sermon.html
+++ b/sermon.html
@@ -140,7 +140,7 @@
                 breadcrumb: `<li class="breadcrumb-item"><a href="#">Home</a></li>
                              <li class="breadcrumb-item"><a href="#">Pages</a></li>
                              <li class="breadcrumb-item text-dark" aria-current="page">Hallelujah Praise</li>`,
-                video: "https://www.youtube.com/embed/YOUTUBE_VIDEO_ID1?autoplay=1&mute=0&rel=0"
+                video: "https://youtu.be/9cokak2clco?si=3XUOMHblDlWxWn5x"
             },
             {
                 image: "img/Song2.jpg",
@@ -149,7 +149,7 @@
                 breadcrumb: `<li class="breadcrumb-item"><a href="#">Home</a></li>
                              <li class="breadcrumb-item"><a href="#">Pages</a></li>
                              <li class="breadcrumb-item text-dark" aria-current="page">Glory to God</li>`,
-                video: "https://www.youtube.com/embed/YOUTUBE_VIDEO_ID2?autoplay=1&mute=0&rel=0"
+                video: "https://youtu.be/9cokak2clco?si=3XUOMHblDlWxWn5x"
             },
             {
                 image: "img/Song3.jpg",
