--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="col-lg-7 text-start">
                             <div class="h-100 d-inline-flex align-items-center me-4">
                                 <span class="fa fa-phone-alt me-2 text-dark"></span>
-                                <a href="#" class="text-secondary"><span>+012 345 6789</span></a>
+                                <a href="#" class="text-secondary"><span>+254 111 289 899</span></a>
                             </div>
                             <div class="h-100 d-inline-flex align-items-center">
                                 <span class="far fa-envelope me-2 text-dark"></span>
@@ -121,29 +121,23 @@
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         let slides = [
+          
             {
-                image: "img/Choir1.png",
-                subtitle: "WELCOME TO CROWN MINISTERS",
-                title: "Sing to the Lord a new song!",
-                buttonText: "Read More",
-                buttonLink: "#"
-            },
-            {
-                image: "img/Choir2.png",
+                image: "",
                 subtitle: "JOIN OUR WORSHIP TEAM",
                 title: "Lift your voice in praise!",
                 buttonText: "Join Now",
                 buttonLink: "#join"
             },
             {
-                image: "img/Choir3.png",
+                image: "",
                 subtitle: "EXPERIENCE SPIRITUAL GROWTH",
                 title: "Worship through song and prayer!",
                 buttonText: "Learn More",
                 buttonLink: "#learn"
             },
             {
-                image: "img/Choir4.jpg",
+                image: "",
                 subtitle: "CELEBRATE GOD'S LOVE",
                 title: "Sing with joy in your heart!",
                 buttonText: "Get Involved",
@@ -199,11 +193,11 @@
                     <div class="col-xl-6">
                         <div class="row g-4">
                             <div class="col-6">
-                                <img src="img/choir2.png" class="img-fluid h-100 wow zoomIn" data-wow-delay="0.1s" alt="">
+                                <img src="" class="img-fluid h-100 wow zoomIn" data-wow-delay="0.1s" alt="image">
                             </div>
                             <div class="col-6">
-                                <img src="img/choir3.png" class="img-fluid pb-3 wow zoomIn" data-wow-delay="0.1s" alt="">
-                                <img src="img/Choir4.jpg" class="img-fluid pt-3 wow zoomIn" data-wow-delay="0.1s" alt="">
+                                <img src="" class="img-fluid pb-3 wow zoomIn" data-wow-delay="0.1s" alt="image">
+                                <img src="" class="img-fluid pt-3 wow zoomIn" data-wow-delay="0.1s" alt="image">
                             </div>
                         </div>
                     </div>
@@ -262,7 +256,8 @@
                 <div class="container text-center bg-primary py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="row g-4 align-items-center">
                         <div class="col-lg-2">
-                            <i class="fa fa-mosque fa-5x text-white"></i>
+                            <i class="fas fa-church fa-5x text-white"></i>
+
                         </div>
                         <div class="col-lg-7 text-center text-lg-start">
                             <h1 class="mb-0">Psalms 30:4: "Sing praises to the Lord, O you his saints, and give thanks to his holy name."</h1>
