--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
                         <div class="col-lg-7 text-start">
                             <div class="h-100 d-inline-flex align-items-center me-4">
                                 <span class="fa fa-phone-alt me-2 text-dark"></span>
-                                <a href="#" class="text-secondary"><span>+012 345 6789</span></a>
+                                <a href="#" class="text-secondary"><span>+254 111 289 899</span></a>
                             </div>
                             <div class="h-100 d-inline-flex align-items-center">
                                 <span class="far fa-envelope me-2 text-dark"></span>
